profile section updated

--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>As I am Software Engineer and Fantastic Career in Good Organization. I am a Good Abilities to Proof
-            my Talents. Where I can Devote Myself Fully and Joyfully give out Best of my Talents & Skills to Become
-            its Strong Asset.</p>
+          <p>As a software engineer, I have the fantastic opportunity to pursue a rewarding career in a reputable organization. I possess exceptional abilities that allow me to demonstrate my talents effectively. I am dedicated to devoting myself wholeheartedly and joyfully contributing my best skills and talents to become a valuable asset to the organization.</p>
         </div>
 
         <div class="row">
