--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
             <div class="row">
               <div class="col-lg-4">
-                <img src="images/james.png" class="img-fluid" alt="">
+                <img src="images/BBS_1505.JPG" class="img-fluid" alt="">
               </div>
               <div class="col-lg-8 pt-4 pt-lg-0 content">
                 <h3>Frontend Web Developer.</h3>
