updating contact page

--- a/index.html
+++ b/index.html
@@ -422,13 +422,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>jamesdurai38@gmail.com</p>
+                <p>jamesdurai@outlook.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 6380251165</p>
+                <p>+91 8220817619</p>
               </div>
 
             </div>
